--- a/module3/css/styles.css
+++ b/module3/css/styles.css
@@ -23,28 +23,29 @@ ol {
   margin: 0 auto;
 }
 .header {
-  margin-top: 77px;
-  margin-bottom: 100px;
+  padding-top: 77px;
+  padding-bottom: 100px;
 }
-.menu {
+.navigation {
   text-align: center;
   font-family: 'Playfair Display', serif;
+  font-size: 0;
 }
-.menu ul li {
+.header__list-item {
   display: inline-block;
   margin-right: 100px;
 }
-.menu ul li:last-child {
+.header__list-item:last-child {
   margin-right: 0;
 }
-.menu ul li a {
+.header__list-link {
   font-size: 14px;
   font-weight: 400;
   color: #626262;
   text-decoration: none;
   text-transform: uppercase;
 }
-.menu ul li a:hover {
+.header__list-link:hover {
   color: #03a9f4;
 }
 /************** CONTENT ***************/
@@ -56,39 +57,37 @@ ol {
   display: inline-block;
   width: 420px;
   margin-right: 60px;
+  margin-bottom: 130px;
 }
 article:nth-child(even) {
   margin-right: 0;   
 }
 .article img  {
   text-align: center;
+  margin-bottom: 30px;
 }
 .article h2 {
   font-weight: 500;
   font-family: 'Playfair Display', serif; 
   font-size: 30px;
   color: #626262;
-  margin: 30px 0;
+  margin-bottom: 30px;
 }
 .article p {
   font-family: 'Playfair Display', serif; 
   font-size: 14px;
   color: #626262;
-  margin-bottom: 130px;
+
 }
-.article p:nth-child(n+2) {
-  margin-bottom: 60px;;   
-}
+
 .category {
   font-family: 'Ubuntu', sans-serif;
   font-size: 14px;
   text-transform: uppercase;
-  margin-top: 30px;
+  margin-bottom: 30px;
   color: #b4ad9e;
 }
-.load-more {
-  margin: 0 auto;
-}
+
 .btn {
   display: block;
   font-size: 20px;
@@ -100,6 +99,11 @@ article:nth-child(even) {
   border-style: solid;
   padding: 20px 30px;
   margin: 0 auto;
+}
+.btn:hover {
+  color: #03a9f4;
+  border-color: #03a9f4;
+  cursor: pointer;
 }
 
 
