--- a/module3/css/styles.css
+++ b/module3/css/styles.css
@@ -62,33 +62,30 @@ ol {
 article:nth-child(even) {
   margin-right: 0;   
 }
-.article img  {
+.article__img  {
   text-align: center;
   margin-bottom: 30px;
 }
-.article h2 {
+.article__title {
   font-weight: 500;
   font-family: 'Playfair Display', serif; 
   font-size: 30px;
   color: #626262;
   margin-bottom: 30px;
 }
-.article p {
+.article__content {
   font-family: 'Playfair Display', serif; 
   font-size: 14px;
   color: #626262;
-
 }
-
-.category {
+.article__category {
   font-family: 'Ubuntu', sans-serif;
   font-size: 14px;
   text-transform: uppercase;
   margin-bottom: 30px;
   color: #b4ad9e;
 }
-
-.btn {
+.load-more__btn {
   display: block;
   font-size: 20px;
   font-family: "PlayfairDisplay";
@@ -100,7 +97,7 @@ article:nth-child(even) {
   padding: 20px 30px;
   margin: 0 auto;
 }
-.btn:hover {
+.load-more__btn:hover {
   color: #03a9f4;
   border-color: #03a9f4;
   cursor: pointer;
