--- a/module5/css/styles.css
+++ b/module5/css/styles.css
@@ -87,7 +87,7 @@ ol {
 	background-position: center top;
 	background-size: cover;
 	height: 600px;
-	position: relative;ß
+	position: relative;
 }
 
 .slider__overlay {
