--- a/module6/css/styles.css
+++ b/module6/css/styles.css
@@ -60,10 +60,12 @@ ol {
 	text-transform: uppercase;
 	position: relative;
 }
+
 .header__list-link:hover {
 	color: #f38181;
 
 }
+
 .header__list-link:after {
 	display: block;
 	position: absolute;
@@ -71,13 +73,15 @@ ol {
 	height: 3px;
 	width: 0;
 	background: #f38181;
-	transition: width 0.3s ease-in-out;
+	transition: width 0.3s linear;
 	left: -5px;
 	bottom: -12px;
 }
+
 .header__list-link:hover:after {
 	width: calc(100% + 10px);
 }
+
 .header__title {
 	font-family: "Montserrat", sans-serif;
 	font-size: 30px;
@@ -85,8 +89,9 @@ ol {
 	color: #333;
 	text-transform: uppercase;
 	text-align: center;
-	margin-bottom: 100px;
+	margin-bottom: 60px;
 }
+
 .header__title span {
 	font-family: 'Kaushan Script', cursive;
 	font-size: 24px;
@@ -94,6 +99,7 @@ ol {
 	display: block;
 	margin-bottom: 8px;
 }
+
 .header__title:after {
 	display: block;
 	content: "";
@@ -102,26 +108,22 @@ ol {
 	height: 3px;
 	margin: 30px auto 30px auto;
 }
+
 .services__list {
 	display: flex;
 	flex-wrap: wrap;
+	justify-content: space-between;
 }
-.services__list-item {
-	width: 330px;
 
-	
+.services__list-item {
+	width: 400px;
+	background: url(../img/alarm.png);
+	background-position: top 0 left 28px;
+	background-repeat: no-repeat;
+	padding-left: 92px;
+	margin-bottom: 100px;
 }
-.services__list-item:before {
-	display: block;
-	content: "";
-	width: 32px;
-	height: 32px;
-	background: url(../img/alarm.png) no-repeat center;
-	flex-grow: 2;
-}
-.services__list-item:not(:nth-child(3n)) {
-	margin-right: 30px;
-}
+
 .services__list-item-title {
 	font-family: "Montserrat", sans-serif;
 	font-size: 14px;
@@ -130,6 +132,7 @@ ol {
 	text-transform: uppercase;
 	margin-bottom: 16px;
 }
+
 .services__list-item-text {
 	font-family: "Roboto", sans-serif;
 	font-size: 15px;
@@ -138,5 +141,174 @@ ol {
 	margin-bottom: 16px;
 }
 
+.team {
+	padding-bottom: 84px;
+}
 
+.team__content {
+	font-family: "Roboto", sans-serif;
+	color: #999;
+	padding: 0 150px;
+	text-align: center;
+	margin-bottom: 90px;
+}
 
+.team__list {
+	display: flex;
+	justify-content: space-between;
+}
+
+.team__list-item {
+	width: 380px;
+
+}
+
+.team__list-item:hover .team__overlay {
+	opacity: 1;
+	box-shadow: 10px 10px 0 #95e1d3;
+}
+
+.team__list-item:hover .team__img-wrap {
+	top: -10px;
+}
+
+.team__img-wrap {
+	position: relative;
+	transition: top .2s linear;
+	top: 0;
+}
+
+.team__img {
+	margin-bottom: 30px;
+}
+
+.team__overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-image: linear-gradient(rgba(243, 129, 129, .9), rgba(252, 227, 138, .9));
+	opacity: 0;
+	transition: box-shadow 0.2s linear;
+	box-shadow: none;
+}
+
+.social-list {
+	position: absolute;
+	bottom: 200px;
+	left: 50%;
+	transform: translateX(-50%);
+	display: flex;
+	justify-content: space-between;
+}
+
+.social-list__link {
+	display: block;
+	width: 58px;
+	height: 58px;
+	background-color: #fce38a;
+	background-repeat: no-repeat;
+	background-position: center;
+	margin: 1px;
+}
+
+.social-list__link:hover {
+	background-color: #95e1d3;
+}
+
+.social-list__item:first-child .social-list__link {
+	background-image: url("../img/facebook.png");
+}
+
+.social-list__item:nth-child(2) .social-list__link {
+	background-image: url("../img/twitter.png");
+}
+
+.social-list__item:nth-child(3) .social-list__link {
+	background-image: url("../img/pinterest.png");
+}
+
+.social-list__item:last-child .social-list__link {
+	background-image: url("../img/instagram.png");
+}
+
+.team__title {
+	font-family: "Motserrat", sans-serif;
+	font-size: 14px;
+	font-weight: 400;
+	color: #333;
+	text-transform: uppercase;
+	text-align: center;
+	margin-bottom: 12px;
+}
+
+.team__position {
+	font-family: "Roboto", sans-serif;
+	font-size: 14px;
+	font-weight: 300;
+	font-style: italic;
+	color: #999;
+	text-align: center;
+}
+
+.footer__list {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	border-top: 1px #e5e5e5 solid;
+	height: 60px;
+}
+
+.footer__text {
+	font-family: "Montserrat", sans-serif;
+	font-size: 14px;
+	color: #333;
+}
+
+.footer__link {
+	color: #f38181;
+	display: inline;
+}
+
+.footer__form {
+	font-size: 0;
+}
+
+.footer__form>* {
+	line-height: 40px;
+	margin: 0;
+	outline: 0;
+}
+
+.footer__input {
+	font-family: "Roboto", sans-serif;
+	font-size: 15px;
+	font-weight: 300;
+	font-style: italic;
+	color: #333;
+	padding: 0 10px;
+	border: 1px solid rgb(231, 231, 231);
+}
+
+.footer__input::placeholder {
+	color: #ccc;
+}
+
+.footer__btn {
+	font-size: 14px;
+	font-family: "Montserrat";
+	color: rgb(255, 255, 255);
+	font-weight: bold;
+	text-transform: uppercase;
+	text-align: center;
+	background-color: rgb(149, 225, 211);
+	padding: 0 32px;
+	border: 1px solid rgb(149, 225, 211);
+	cursor: pointer;
+	transition: all 0.3s ease 0s;
+}
+
+.footer__btn:hover {
+  box-shadow: inset 0 0 0 4px #87d0c3;
+}
