--- a/module6/css/styles.css
+++ b/module6/css/styles.css
@@ -239,7 +239,7 @@ ol {
 }
 
 .team__title {
-	font-family: "Motserrat", sans-serif;
+	font-family: "Montserrat", sans-serif;
 	font-size: 14px;
 	font-weight: 400;
 	color: #333;
@@ -308,12 +308,13 @@ ol {
 	text-transform: uppercase;
 	text-align: center;
 	background-color: var(--primary-color);
-	padding: 0 32px;
-	border: 1px solid var(--primary-color);
+	padding: 1px 32px;
+	/* border: 1px solid var(--primary-color); */
+	border: 0;
 	cursor: pointer;
-	transition: all 0.2s ease 0s;
+	transition: all 0.2s linear;
 }
 
 .footer__btn:hover {
-	box-shadow: inset 0 0 0 4px #87d0c3;
+	box-shadow: inset 0 0 0 6px #87d0c3;
 }
