--- a/module11/src/sass/base.scss
+++ b/module11/src/sass/base.scss
@@ -6,10 +6,58 @@ html {
 *::before,
 *::after {
   box-sizing: inherit;
+  margin: 0;
+  padding: 0;
 }
 
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+a {
+	text-decoration: none;
+	display: block;
+}
+
+img {
+	min-height: 100%;
+	height: auto;
+	display: block;
+}
+
+ul,
+ol {
+	list-style: none;
+}
+
+.container {
+	width: 1200px;
+	margin: 0 auto;
+}
+
+.section__title {
+	font-family: "MontserratB", sans-serif;
+	font-size: 30px;
+	font-weight: 700;
+	color: #333;
+	text-transform: uppercase;
+	text-align: center;
+	margin-bottom: 60px;
+	span {
+		font-family: 'Kaushan Script', cursive;
+		font-size: 24px;
+		text-transform: none;
+		display: block;
+		margin-bottom: 8px;
+	}
+	&:after {
+		display: block;
+		content: '';
+		background: $active-color;
+		width: 60px;
+		height: 3px;
+		margin: 30px auto 30px auto;
+	}
 }
