--- a/module11/src/sass/main.scss
+++ b/module11/src/sass/main.scss
@@ -3,4 +3,14 @@
  */
 
 @import 'normalize.scss';
+@import 'fonts.scss';
+@import 'variables.scss';
+@import 'placeholders.scss';
+@import 'mixins.scss';
 @import 'base.scss';
+
+// SERCTIONS
+@import './sections/header.scss';
+@import './sections/services.scss';
+@import './sections/team.scss';
+@import './sections/footer.scss';
